cmake_minimum_required(VERSION 3.18)
file(GLOB sources "*.cpp")
foreach(source ${sources})
    get_filename_component(base "${source}" NAME_WE)
    add_executable("${base}" "${source}")
    set_property(TARGET "${base}" PROPERTY CXX_STANDARD 20)
    target_link_libraries("${base}" ${library_name})
    add_test("${CMAKE_PROJECT_NAME}-${base}" "${base}")
endforeach()
